--- a/build.gradle
+++ b/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.json:json:20210307'
 }
